deploy/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: t8c-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: t8c-operator
  template:
    metadata:
      labels:
        name: t8c-operator
    spec:
      serviceAccountName: t8c-operator
      containers:
        - name: t8c-operator
          # Replace this with the built image name
          image: lemurnomic/t8c-operator:7.21.0
          imagePullPolicy: Always
