deploy/destination_rule_istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: "istio-kiali"
 namespace: "istio-system"
spec:
 host: "kiali.istio-system.svc.cluster.local"
 trafficPolicy:
   tls:
     mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: "istio-tracing"
 namespace: "istio-system"
spec:
 host: "tracing.istio-system.svc.cluster.local"
 trafficPolicy:
   tls:
     mode: DISABLE
