deploy/destination_rule_lemur.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: "api-lemur"
 namespace: "lemur"
spec:
 host: "*.lemur.svc.cluster.local"
 trafficPolicy:
   tls:
     mode: DISABLE
